# detiq-t

./: .gitignore  CHANGELOG.md  CMakeLists.txt
Applications/BasicApplication/: BasicAlgorithmService.cpp  BasicAlgorithmService.h  main.cpp
Applications/Binarization/: main.cpp
Applications/Binarization/Services/: BasicTools.cpp  BasicTools.h  BinarizationService.cpp  BinarizationService.h
Applications/Binarization/Widgets/: BinarizationWidget.cpp  BinarizationWidget.h
Applications/BitPlane/: main.cpp
Applications/BitPlane/Services/: BitPlaneService.cpp  BitPlaneService.h
Applications/BitPlane/Widgets/: BitPlaneChoice.cpp  BitPlaneChoice.h  BitPlaneWindow.cpp  BitPlaneWindow.h
Applications/ComponentLabeling/: ComponentLabelingService.cpp  ComponentLabelingService.h  OptionsWidget.cpp  OptionsWidget.h  ResultWidget.cpp  ResultWidget.h  main.cpp
Applications/Dithering/: DitheringService.cpp  DitheringService.h  main.cpp
Applications/FiltrMe/: FilteringService.cpp  FilteringService.h  main.cpp
Applications/FiltrMe/Widgets/: FilterChoice.cpp  FilterChoice.h  FilterEditor.cpp  FilterEditor.h  FilterEditorItem.cpp  FilterEditorItem.h
Applications/MorphoMat/: main.cpp
Applications/MorphoMat/Services/: MorphoMatService.cpp  MorphoMatService.h
Applications/MorphoMat/Widgets/: StructElemViewer.cpp  StructElemViewer.h  StructElemWindow.cpp  StructElemWindow.h
GenericInterface/: CMakeLists.txt  Exceptions.h  GenericInterface.cpp  GenericInterface.h  InterfaceExceptions.h  Service.h  ServiceExceptions.h  genericinterface_en.qm  genericinterface_en.ts  genericinterface_english.ts  genericinterface_fr.qm  genericinterface_fr.ts  res.qrc
GenericInterface/Services/: AlgorithmService.cpp  AlgorithmService.h  FileService.cpp  FileService.h  Node.h  UtilityService.cpp  UtilityService.h  WindowService.cpp  WindowService.h
GenericInterface/Utilities/: Log.cpp  Log.h
GenericInterface/Widgets/: AboutDialog.cpp  AboutDialog.h  ImageListBox.h  KeyboardShortcut.cpp  KeyboardShortcut.h
GenericInterface/Widgets/ImageWidgets/: AlternativeImageView.cpp  AlternativeImageView.h  ColumnView.cpp  ColumnView.h  ColumnWindow.cpp  ColumnWindow.h  DoubleImageWindow.cpp  DoubleImageWindow.h  GenericHistogramView.cpp  GenericHistogramView.h  GenericHistogramWindow.cpp  GenericHistogramWindow.h  GraphicalHistogram.cpp  GraphicalHistogram.h  GridView.cpp  GridView.h  GridWindow.cpp  GridWindow.h  HistogramPicker.cpp  HistogramPicker.h  HistogramView.cpp  HistogramView.h  HistogramWindow.cpp  HistogramWindow.h  ImageContextMenu.cpp  ImageContextMenu.h  ImageView.cpp  ImageView.h  ImageViewer.cpp  ImageViewer.h  (+23 more)
ImageIn/: Algorithm.h  Algorithm.tpp  AlgorithmCollection.h  AlgorithmException.h  Array.h  BadImageException.h  BinaryImage.cpp  BinaryImage.h  BmpImage.cpp  BmpImage.h  CMakeLists.txt  ColumnProfile.h  ColumnProfile.tpp  Converter.h  Converter.tpp  GenericAlgorithm.h  GenericAlgorithm.tpp  Graph.cpp  Graph.h  GrayscaleImage.h  GrayscaleImage.tpp  Histogram.h  Histogram.tpp  Image.h  Image.tpp  ImageFile.h  ImageFileAbsFactory.cpp  ImageFileAbsFactory.h  ImageFileException.h  ImageFileFactory.cpp  ImageFileFactory.h  ImageIn.bkl  JpgImage.cpp  JpgImage.h  LineProfile.h  LineProfile.tpp  Makefile  PixelAlgorithm.h  PngImage.cpp  PngImage.h  (+14 more)
ImageIn/Algorithm/: Average.h  Binarization.h  Binarization.tpp  BitPlane.h  ComponentLabeling.h  ComponentLabeling.tpp  Difference.h  Distance.h  Dithering.h  Dithering.tpp  EdgeColoration.h  Filter.cpp  Filter.h  Filtering.cpp  Filtering.h  Identity.h  Inversion.h  MorphoMat.h  Otsu.h  Otsu.tpp  RgbToGrayscale.h  RgbToGrayscale.tpp  SquareSum.h  mainFiltration.cpp
Test/: BasicApplicationTest.cpp  CMakeLists.txt  ComponentLabelingTester.h  CropTest.h  FilteringTest.h  FilteringTester.h  GenericInterfaceTest.cpp  HistogramTest.h  IOTester.h  MorphoMatTester.h  ProjHistTest.h  README.md  main.cpp
Tests/GenericInterface/: GenericInterface.pro  Tests.cpp
Tests/ImageIn/: AlgorithmTest.h  BinarizationTester.h  BitPlaneTest.h  ComponentLabelingTest.h  ComponentLabelingTester.h  ConvertedTest.h  ConverterTest.h  ConverterTester.h  CopyTest.h  CoreTester.h  CropTest.h  FilteringTest.h  FilteringTester.h  HistogramTest.h  IOTest.h  IOTester.h  ImageDiff.h  MorphoMatTester.h  ProjHistTest.h  Test.h  Tester.h  UtilityTester.h  main.cpp
(+9 files in other folders)
